--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-14
-android.library.reference.1=../../../../Develop/Android/android-sdk-macosx/extras/android/support/v7/appcompat
+android.library.reference.1=../../../AppData/Local/Android/android-sdk/extras/android/support/v7/appcompat
