--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
      <uses-sdk
-        android:minSdkVersion="12"
+        android:minSdkVersion="8"
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -36,7 +36,8 @@
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustPan"
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
