--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,11 @@
         android:theme="@style/Theme.AppCompat" >
         <activity
             android:name="com.crazybean.framework.UiActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            uiOptions="splitActionBarWhenNarrow">
+            
+ 
+            
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,7 +46,8 @@
             </intent-filter>
         </activity>
         
-                
+          
+       <meta-data android:name="android.support.UI_OPTIONS" android:value="splitActionBarWhenNarrow" />
 		<meta-data android:name="state_table_class_name" android:value="com.example.weatherdemo.AppConfig" />
 		<meta-data android:name="state_table_variable_name" android:value="KStateTable" />
 		<meta-data android:name="state_table_page_function" android:value="getPage" />
